get app to working state

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
   "author": "Kelvin Gobo",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^2.12.0",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.0.0",
     "nodemon": "^2.0.2"
   }
 }
