--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "graphql": "^15.0.0",
     "graphql-tag": "^2.10.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
